--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,13 +13,11 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
     <style name="Theme.CloudFaceCounter.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
-    <style name="Theme.CloudFaceCounter.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
+    <style name="Theme.CloudFaceCounter.AppBarOverlay"
+        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.CloudFaceCounter.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
